--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: A-Child-of-the-Orient_66019
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: archival
+  image_path: 66019-h/images/cover2.jpg
 creator:
   author:
     agent_name: Vaka, Demetra
     gutenberg_agent_id: '53599'
     url: http://www.gutenberg.org/2009/agents/53599
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66019#A-Child-of-the-Orient
 gutenberg_issued: '2021-08-09'
 gutenberg_type: Text
 identifiers:
